--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@supabase/supabase-js": "^2.43.5",
     "date-fns": "^3.6.0",
     "next": "14.2.4",
+    "next-auth": "^5.0.0-beta.19",
     "react": "^18",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-loading-skeleton": "^3.4.0",
     "sharp": "^0.33.4"
