--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "react-loading-skeleton": "^3.4.0",
     "sharp": "^0.33.4"
   },
